<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="compose_mail">Compose</string>
    <string name="compose">Compose</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="spam">Mark as spam</string>
    <string name="mark_read_unread">Mark as read/unread</string>
    <string name="more_options">More options</string>
    <string name="star">Star</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="labels">Labels</string>
    <string name="app_name">Maily</string>
    <string name="login_to_your_maily_account">Login to your Maily account</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="maily_logo">maily logo</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthdate_dd_mm_yyyy">Birthdate (DD/MM/YYYY)</string>
    <string name="select_image">Select Image</string>
    <string name="register">Register</string>
    <string name="create_your_maily_account">Create your Maily account</string>
    <string name="selected_image">Selected Image</string>
    <string name="BaseUrl">http://10.0.2.2:5001/api/</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="user_avatar">user avatar</string>


</resources>
