<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/maily_logo"
        app:srcCompat="@drawable/maily_logo" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login_to_your_maily_account"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="Email"
        android:background="@drawable/input_box"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_box"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:backgroundTint="#1a73e8"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="#000000"
        android:textSize="15sp"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/create_account"
        android:textColor="#1a73e8"
        android:textSize="17sp"
        android:textStyle="bold"
        android:paddingTop="10dp"/>

</LinearLayout>